--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="../build/exercise.js"></script>
+    <script src="../build/namespaces.js"></script>
 </head>
 <body>
     
